--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -375,3 +375,6 @@ ConnectionType=USBOnly
 bUseManualIPAddress=False
 ManualIPAddress=
 
+[/Script/UnrealEd.CookerSettings]
+bCookOnTheFlyForLaunchOn=False
+
