--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -78,7 +78,7 @@ vr.RoundRobinOcclusion=False
 vr.ODSCapture=False
 r.MeshStreaming=False
 r.WireframeCullThreshold=5.000000
-r.RayTracing=False
+r.RayTracing=True
 r.RayTracing.UseTextureLod=False
 r.SupportStationarySkylight=True
 r.SupportLowQualityLightmaps=True
@@ -86,7 +86,7 @@ r.SupportPointLightWholeSceneShadows=True
 r.SupportAtmosphericFog=True
 r.SupportSkyAtmosphere=True
 r.SupportSkyAtmosphereAffectsHeightFog=False
-r.SkinCache.CompileShaders=False
+r.SkinCache.CompileShaders=True
 r.SkinCache.DefaultBehavior=1
 r.SkinCache.SceneMemoryLimitInMB=128.000000
 r.Mobile.EnableStaticAndCSMShadowReceivers=True
@@ -120,6 +120,8 @@ r.DynamicGlobalIlluminationMethod=1
 r.ReflectionMethod=1
 
 r.Shadow.Virtual.Enable=1
+r.Lumen.TraceMeshSDFs=0
+r.Lumen.HardwareRayTracing=True
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Mobile
@@ -377,4 +379,11 @@ ManualIPAddress=
 
 [/Script/UnrealEd.CookerSettings]
 bCookOnTheFlyForLaunchOn=False
+
+[/Script/Engine.PhysicsSettings]
+bSubstepping=True
+bSubsteppingAsync=True
+bTickPhysicsAsync=False
+MaxSubstepDeltaTime=0.001300
+MaxSubsteps=16
 
