two-handed weapons + polish

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -111,8 +111,8 @@ bDiscardSkeletalMeshOptionalLODs=(Default=False,PerPlatform=())
 VisualizeCalibrationColorMaterialPath=None
 VisualizeCalibrationCustomMaterialPath=None
 VisualizeCalibrationGrayscaleMaterialPath=None
-r.Mobile.AntiAliasing=3
-r.Mobile.FloatPrecisionMode=2
+r.Mobile.AntiAliasing=1
+r.Mobile.FloatPrecisionMode=1
 r.OpenGL.ForceDXC=0
 
 r.DynamicGlobalIlluminationMethod=1
@@ -122,6 +122,10 @@ r.ReflectionMethod=1
 r.Shadow.Virtual.Enable=1
 r.Lumen.TraceMeshSDFs=0
 r.Lumen.HardwareRayTracing=True
+r.Shaders.CompressionFormat=3
+vr.VRS.HMDFixedFoveationLevel=4
+vr.VRS.HMDFixedFoveationDynamic=True
+r.Shadow.CSMCaching=True
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Mobile
@@ -179,7 +183,7 @@ AutoStreamingThreshold=0.000000
 SoundCueCookQualityIndex=-1
 
 [/Script/AndroidRuntimeSettings.AndroidRuntimeSettings]
-PackageName=com.epicgames.[PROJECT]
+PackageName=com.wp2.[PROJECT]
 StoreVersion=1
 StoreVersionOffsetArmV7=0
 StoreVersionOffsetArm64=0
@@ -188,7 +192,7 @@ ApplicationDisplayName=
 VersionDisplayName=1.0
 MinSDKVersion=23
 TargetSDKVersion=25
-InstallLocation=InternalOnly
+InstallLocation=Auto
 bEnableGradle=True
 bEnableLint=False
 bPackageDataInsideApk=True
@@ -208,7 +212,7 @@ bFullScreen=True
 bEnableNewKeyboard=True
 DepthBufferPreference=Default
 bValidateTextureFormats=True
-bEnableBundle=False
+bEnableBundle=True
 bEnableUniversalAPK=True
 bBundleABISplit=True
 bBundleLanguageSplit=True
@@ -362,6 +366,10 @@ bAllowClientSideNavigation=True
 [/Script/Engine.Engine]
 +ActiveGameNameRedirects=(OldGameName="TP_VirtualRealityBP",NewGameName="/Script/VRST")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_VirtualRealityBP",NewGameName="/Script/VRST")
+GenerateDefaultTimecodeFrameRate=(Numerator=60,Denominator=1)
+CustomTimeStepClassName=None
+MinDesiredFrameRate=90.000000
+SmoothedFrameRateRange=(LowerBound=(Type=Inclusive,Value=60.000000),UpperBound=(Type=Exclusive,Value=124.000000))
 
 [/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings]
 bEnablePlugin=True
