--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -5,7 +5,7 @@ r.Mobile.DisableVertexFog=True
 r.Mobile.AllowDitheredLODTransition=False
 r.Mobile.AllowSoftwareOcclusion=False
 r.Mobile.VirtualTextures=False
-r.DiscardUnusedQuality=False
+r.DiscardUnusedQuality=True
 r.AllowOcclusionQueries=True
 r.MinScreenRadiusForLights=0.030000
 r.MinScreenRadiusForDepthPrepass=0.030000
@@ -13,8 +13,8 @@ r.MinScreenRadiusForCSMDepth=0.010000
 r.PrecomputedVisibilityWarning=False
 r.TextureStreaming=True
 Compat.UseDXT5NormalMaps=False
-r.VirtualTextures=False
-r.VirtualTexturedLightmaps=False
+r.VirtualTextures=True
+r.VirtualTexturedLightmaps=True
 r.VT.TileSize=128
 r.VT.TileBorderSize=4
 r.vt.FeedbackFactor=16
@@ -35,7 +35,7 @@ r.TessellationAdaptivePixelsPerTriangle=48.000000
 r.SeparateTranslucency=False
 r.TranslucentSortPolicy=0
 TranslucentSortAxis=(X=0.000000,Y=-1.000000,Z=0.000000)
-r.CustomDepth=1
+r.CustomDepth=3
 r.CustomDepthTemporalAAJitter=True
 r.PostProcessing.PropagateAlpha=0
 r.DefaultFeature.Bloom=False
@@ -48,12 +48,12 @@ r.DefaultFeature.AutoExposure.ExtendDefaultLuminanceRange=True
 r.DefaultFeature.AutoExposure.ExtendDefaultLuminanceRange=True
 r.EyeAdaptation.EditorOnly=False
 r.DefaultFeature.MotionBlur=False
-r.DefaultFeature.LensFlare=False
+r.DefaultFeature.LensFlare=True
 r.TemporalAA.Upsampling=False
 r.SSGI.Enable=False
-r.AntiAliasingMethod=3
+r.AntiAliasingMethod=4
 r.DefaultFeature.LightUnits=1
-r.DefaultBackBufferPixelFormat=4
+r.DefaultBackBufferPixelFormat=3
 r.Shadow.UnbuiltPreviewInGame=True
 r.StencilForLODDither=False
 r.EarlyZPass=3
@@ -74,9 +74,9 @@ vr.InstancedStereo=True
 r.MobileHDR=False
 vr.MobileMultiView=True
 r.Mobile.UseHWsRGBEncoding=True
-vr.RoundRobinOcclusion=False
+vr.RoundRobinOcclusion=True
 vr.ODSCapture=False
-r.MeshStreaming=False
+r.MeshStreaming=True
 r.WireframeCullThreshold=5.000000
 r.RayTracing=True
 r.RayTracing.UseTextureLod=False
@@ -111,7 +111,7 @@ bDiscardSkeletalMeshOptionalLODs=(Default=False,PerPlatform=())
 VisualizeCalibrationColorMaterialPath=None
 VisualizeCalibrationCustomMaterialPath=None
 VisualizeCalibrationGrayscaleMaterialPath=None
-r.Mobile.AntiAliasing=1
+r.Mobile.AntiAliasing=3
 r.Mobile.FloatPrecisionMode=1
 r.OpenGL.ForceDXC=0
 
@@ -122,10 +122,14 @@ r.ReflectionMethod=1
 r.Shadow.Virtual.Enable=1
 r.Lumen.TraceMeshSDFs=0
 r.Lumen.HardwareRayTracing=True
-r.Shaders.CompressionFormat=3
+r.Shaders.CompressionFormat=2
 vr.VRS.HMDFixedFoveationLevel=4
 vr.VRS.HMDFixedFoveationDynamic=True
 r.Shadow.CSMCaching=True
+r.Mobile.Forward.EnableClusteredReflections=True
+r.VT.AnisotropicFiltering=True
+r.MSAACount=8
+r.HeterogeneousVolumes=False
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Mobile
@@ -189,9 +193,9 @@ StoreVersionOffsetArmV7=0
 StoreVersionOffsetArm64=0
 StoreVersionOffsetX8664=0
 ApplicationDisplayName=
-VersionDisplayName=1.0
-MinSDKVersion=23
-TargetSDKVersion=25
+VersionDisplayName=0.15
+MinSDKVersion=30
+TargetSDKVersion=32
 InstallLocation=Auto
 bEnableGradle=True
 bEnableLint=False
@@ -284,8 +288,8 @@ bMultiTargetFormat_ASTC=True
 TextureFormatPriority_ETC2=0.200000
 TextureFormatPriority_DXT=0.600000
 TextureFormatPriority_ASTC=0.900000
-SDKAPILevelOverride=
-NDKAPILevelOverride=
+SDKAPILevelOverride=matchndk
+NDKAPILevelOverride=android-30
 bStreamLandscapeMeshLODs=False
 
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
@@ -379,7 +383,7 @@ SecurityToken=382C1171FCA54D86A5AED2CAB8D1A427
 bIncludeInShipping=False
 bAllowExternalStartInShipping=False
 bCompileAFSProject=False
-bUseCompression=False
+bUseCompression=True
 bLogFiles=False
 bReportStats=False
 ConnectionType=USBOnly
@@ -388,6 +392,7 @@ ManualIPAddress=
 
 [/Script/UnrealEd.CookerSettings]
 bCookOnTheFlyForLaunchOn=False
+cook.ASTCTextureCompressor=1
 
 [/Script/Engine.PhysicsSettings]
 bSubstepping=True
@@ -395,4 +400,7 @@ bSubsteppingAsync=True
 bTickPhysicsAsync=False
 MaxSubstepDeltaTime=0.001300
 MaxSubsteps=16
+
+[/Script/Engine.AudioSettings]
+DefaultAudioCompressionType=PlatformSpecific
 
