--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -111,7 +111,7 @@ bDiscardSkeletalMeshOptionalLODs=(Default=False,PerPlatform=())
 VisualizeCalibrationColorMaterialPath=None
 VisualizeCalibrationCustomMaterialPath=None
 VisualizeCalibrationGrayscaleMaterialPath=None
-r.Mobile.AntiAliasing=3
+r.Mobile.AntiAliasing=1
 r.Mobile.FloatPrecisionMode=1
 r.OpenGL.ForceDXC=0
 
@@ -130,6 +130,7 @@ r.Mobile.Forward.EnableClusteredReflections=True
 r.VT.AnisotropicFiltering=True
 r.MSAACount=8
 r.HeterogeneousVolumes=False
+r.Mobile.SupportGPUScene=True
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Mobile
@@ -189,15 +190,13 @@ SoundCueCookQualityIndex=-1
 [/Script/AndroidRuntimeSettings.AndroidRuntimeSettings]
 PackageName=com.wp2.[PROJECT]
 StoreVersion=1
-StoreVersionOffsetArmV7=0
 StoreVersionOffsetArm64=0
 StoreVersionOffsetX8664=0
 ApplicationDisplayName=
 VersionDisplayName=0.15
-MinSDKVersion=30
+MinSDKVersion=26
 TargetSDKVersion=32
 InstallLocation=Auto
-bEnableGradle=True
 bEnableLint=False
 bPackageDataInsideApk=True
 bCreateAllPlatformsInstall=False
@@ -216,6 +215,8 @@ bFullScreen=True
 bEnableNewKeyboard=True
 DepthBufferPreference=Default
 bValidateTextureFormats=True
+bForceCompressNativeLibs=False
+bEnableAdvancedBinaryCompression=False
 bEnableBundle=True
 bEnableUniversalAPK=True
 bBundleABISplit=True
@@ -225,10 +226,7 @@ ExtraApplicationSettings=
 ExtraActivitySettings=
 bAndroidVoiceEnabled=False
 +PackageForOculusMobile=Quest2
-+PackageForOculusMobile=Quest
 bRemoveOSIG=False
-+GoogleVRCaps=Daydream33
-bGoogleVRSustainedPerformance=False
 KeyStore=UE.keystore
 KeyAlias=DistroKey
 KeyStorePassword=codesigner
@@ -238,12 +236,14 @@ bBuildForX8664=False
 bBuildForES31=False
 bSupportsVulkan=True
 bSupportsVulkanSM5=False
-ClangSanitizer=None
+DebugVulkanLayerDirectory=(Path="")
 bAndroidOpenGLSupportsBackbufferSampling=False
 bDetectVulkanByDefault=True
 bBuildWithHiddenSymbolVisibility=False
+bDisableStackProtector=False
+bDisableLibCppSharedDependencyValidation=False
 bSaveSymbols=False
-bForceLDLinker=False
+bStripShaderReflection=True
 bEnableGooglePlaySupport=False
 bUseGetAccounts=False
 GamesAppID=
@@ -264,14 +264,14 @@ AudioNumBuffersToEnqueue=4
 AudioMaxChannels=0
 AudioNumSourceWorkers=0
 SpatializationPlugin=Resonance Audio
+SourceDataOverridePlugin=
 ReverbPlugin=Resonance Audio
-OcclusionPlugin=
+OcclusionPlugin=Built-in Occlusion
 CompressionOverrides=(bOverrideCompressionTimes=False,DurationThreshold=5.000000,MaxNumRandomBranches=0,SoundCueQualityIndex=0)
-bUseAudioStreamCaching=False
 CacheSizeKB=0
 MaxChunkSizeOverrideKB=0
 bResampleForDevice=False
-SoundCueCookQualityIndex=-1
+SoundCueCookQualityIndex=0
 MaxSampleRate=0.000000
 HighSampleRate=0.000000
 MedSampleRate=0.000000
@@ -289,8 +289,10 @@ TextureFormatPriority_ETC2=0.200000
 TextureFormatPriority_DXT=0.600000
 TextureFormatPriority_ASTC=0.900000
 SDKAPILevelOverride=matchndk
-NDKAPILevelOverride=android-30
+NDKAPILevelOverride=
+BuildToolsOverride=
 bStreamLandscapeMeshLODs=False
+bEnableDomStorage=False
 
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
 SpatializationPlugin=Resonance Audio
@@ -375,6 +377,9 @@ GenerateDefaultTimecodeFrameRate=(Numerator=60,Denominator=1)
 CustomTimeStepClassName=None
 MinDesiredFrameRate=90.000000
 SmoothedFrameRateRange=(LowerBound=(Type=Inclusive,Value=60.000000),UpperBound=(Type=Exclusive,Value=124.000000))
+bUseFixedFrameRate=True
+FixedFrameRate=120.000000
+bSmoothFrameRate=False
 
 [/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings]
 bEnablePlugin=True
@@ -397,7 +402,7 @@ cook.ASTCTextureCompressor=1
 [/Script/Engine.PhysicsSettings]
 bSubstepping=True
 bSubsteppingAsync=True
-bTickPhysicsAsync=False
+bTickPhysicsAsync=True
 MaxSubstepDeltaTime=0.001300
 MaxSubsteps=16
 
