multiplayer technically present

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -149,9 +149,9 @@ FourPlayerSplitscreenLayout=Grid
 bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Script/Engine.GameInstance
 GameDefaultMap=/Game/VRTemplate/Maps/VRTemplateMap.VRTemplateMap
-ServerDefaultMap=/Engine/Maps/Entry.Entry
+ServerDefaultMap=/Game/VRTemplate/Maps/VRTemplateMap.VRTemplateMap
 GlobalDefaultGameMode=/Game/VRTemplate/Blueprints/VRGameMode.VRGameMode_C
-GlobalDefaultServerGameMode=None
+GlobalDefaultServerGameMode=/Game/VRTemplate/Blueprints/VRGameMode.VRGameMode_C
 
 [/Script/Slate.SlateSettings]
 bExplicitCanvasChildZOrder=True
@@ -289,7 +289,7 @@ TextureFormatPriority_ETC2=0.200000
 TextureFormatPriority_DXT=0.600000
 TextureFormatPriority_ASTC=0.900000
 SDKAPILevelOverride=matchndk
-NDKAPILevelOverride=
+NDKAPILevelOverride=android-32
 BuildToolsOverride=
 bStreamLandscapeMeshLODs=False
 bEnableDomStorage=False
@@ -407,7 +407,7 @@ bTickPhysicsAsync=True
 MaxSubstepDeltaTime=0.001300
 MaxSubsteps=10
 AsyncFixedTimeStepSize=0.001300
-ChaosSettings=(DefaultThreadingModel=SingleThread,DedicatedThreadTickMode=VariableCapped,DedicatedThreadBufferMode=Double)
+ChaosSettings=(DefaultThreadingModel=SingleThread,DedicatedThreadTickMode=VariableCappedWithTarget,DedicatedThreadBufferMode=Triple)
 bEnableStabilization=True
 bDisableCCD=False
 MinDeltaVelocityForHitEvents=1.000000
